<resources>
    <string name="app_name">SlidingTiles</string>
    <string name="sign_up">sign up</string>
    <string name="sign_in">sign in</string>
    <string name="forgot_password">forgot password</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="cancel">Cancel</string>
    <string name="reset_password">Reset Password</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="sliding_tiles">Sliding Tiles</string>
    <string name="select_the_following_games">Select the following games</string>
    <string name="score_per_person">Score per-person</string>
    <string name="score_per_game">Score per-game</string>
    <string name="wrong_note">Wrong username or password</string>
    <string name="welcome_message">Welcome</string>
    <string name="occupied">Username Occupied</string>
    <string name="mismatch">Yours passwords doesn\'t match</string>
    <string name="success">Registration Successful</string>
    <string name="success_msg">Reset Successful</string>
    <string name="userdne">No such user exists</string>
    <string name="mismatch_msg">Your passwords doesn\'t match</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create_your_password">Create your password</string>
    <string name="create_your_username">Create your username</string>
    <string name="please_enter_your_username">Please enter your username</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="passwaord_confirm_1">Confirm your password</string>
    <string name="confirm_your_password_1">Confirm your password</string>
    <string name="sliding_tiles_1">Sliding Tiles</string>
    <string name="coming_soon_1">Coming Soon</string>
    <string name="coming_soon_2">Coming Soon</string>
    <string name="coming_soon_3">Coming Soon</string>
    <string name="coming_soon_4">Coming Soon</string>
    <string name="coming_soon_5">Coming Soon</string>
    <string name="back_1">Back</string>
    <string name="sliding_tiles_2">Sliding Tiles</string>
    <string name="coming_soon_9">Coming Soon</string>
    <string name="coming_soon_8">Coming Soon</string>
    <string name="coming_soon_10">Coming Soon</string>
    <string name="coming_soon_12">Coming Soon</string>
    <string name="undo">undo</string>
    <string name="back_2">Back</string>
    <string name="coming_soon_11">Coming Soon</string>
    <string name="back_3">Back</string>
    <string name="previous_10">previous 10</string>
    <string name="next_10">Next 10</string>
    <string name="title_of_a_scorboard">Sliding Tile Top Scores</string>
    <string name="back_6">Back</string>
    <string name="next_10_1">Next 10</string>
    <string name="previous_10_2">Previous 10</string>
    <string name="title_3">Your scores in Sliding Tiles</string>
    <string name="toolong">Username too long</string>
    <string name="full_image">Full Image</string>
    <string name="next">next</string>
    <string name="select_game_background">Select Game Background</string>
    <string name="go">Go</string>
    <string name="select_game_complexity">Select Game Complexity</string>
    <string name="enter_max_undo">Enter Max Undo</string>
    <string name="_3">3</string>
    <string name="max_undo">Max Undo</string>
    <string name="your_score">Your Score</string>
    <string name="show_more_scores">Show More Scores</string>
    <string name="start_another_game">Start Another Game</string>
    <string name="exit_000">Exit</string>
    <string name="hangman">Hangman</string>
    <string name="blackjack">Blackjack</string>
</resources>
