<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group0642.csc207.fall18.gamecenter.PersonalScoreActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="551dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/game1"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:text="@string/sliding_tiles_2" />

        <Button
            android:id="@+id/game2"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:enabled="false"
            android:text="@string/coming_soon_9" />

        <Button
            android:id="@+id/game3"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:enabled="false"
            android:text="@string/coming_soon_8" />

        <Button
            android:id="@+id/game4"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:enabled="false"
            android:text="@string/coming_soon_11" />

        <Button
            android:id="@+id/game5"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:enabled="false"
            android:text="@string/coming_soon_10" />

        <Button
            android:id="@+id/game6"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:enabled="false"
            android:text="@string/coming_soon_12" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>