<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group0642.csc207.fall18.gamecenter.DifficultySetting">

    <Spinner
        android:id="@+id/spinnercomplexity"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="260dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/gobutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="247dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="64dp"
        android:text="@string/go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnercomplexity" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="36dp"
        android:text="@string/select_game_complexity"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnercomplexity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="33dp"
        android:text="@string/enter_max_undo"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/maxundo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnercomplexity"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/maxundo"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="230dp"
        android:ems="10"
        android:hint="@string/max_undo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
</android.support.constraint.ConstraintLayout>