<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group0642.csc207.fall18.gamecenter.SlidingTileSetting">

    <Spinner
        android:id="@+id/spinnerbackground"
        android:layout_width="150dp"
        android:layout_height="34dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="42dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.669"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textVieww" />

    <TextView
        android:id="@+id/textVieww"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="19dp"
        android:text="@string/select_game_background"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerbackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnercomplexity" />

    <Spinner
        android:id="@+id/spinnercomplexity"
        android:layout_width="120dp"
        android:layout_height="31dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="45dp"
        app:layout_constraintBottom_toTopOf="@+id/textVieww"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/gobutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="247dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="49dp"
        android:text="@string/go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnercomplexity"
        app:layout_constraintVertical_bias="0.777" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="12dp"
        android:text="@string/select_game_complexity"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnercomplexity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="19dp"
        android:text="@string/enter_max_undo"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/maxundo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerbackground" />

    <EditText
        android:id="@+id/maxundo"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="167dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="94dp"
        android:ems="10"
        android:hint="@string/max_undo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
</android.support.constraint.ConstraintLayout>